Minor re-branding, repo URL updates, re-version
Removed old release notes
Changed some GeekCash references to BlazeGeekCash

Mostly vanity changes to test build

Re-versioned to 0.0.0.1

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -1,8 +1,8 @@
-Source: geekcash
+Source: blazegeekcash
 Section: utils
 Priority: optional
-Maintainer: Holger Schinzel <holger@geekcash.org>
-Uploaders: Holger Schinzel <holger@geekcash.org>
+Maintainer: Hunter David <hunter@blazegeek.com>
+Uploaders: Hunter David <hunter@blazegeek.com>
 Build-Depends: debhelper,
  devscripts,
  automake,
@@ -26,9 +26,9 @@ Build-Depends: debhelper,
  python,
  libzmq3-dev
 Standards-Version: 3.9.2
-Homepage: https://www.geekcash.org/
-Vcs-Git: git://github.com/geekcash/geek.git
-Vcs-Browser: https://github.com/geekcash/geek
+Homepage: https://www.blazegeek.com/
+Vcs-Git: git://github.com/blazegeek/blazegeekcash.git
+Vcs-Browser: https://github.com/blazegeek/blazegeekcash
 
 Package: geekcashd
 Architecture: any
