--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 # Copyright (c) 2013-2016 The Bitcoin Core developers
 # Copyright (c) 2014-2018 The Dash Core developers
 # Copyright (c) 2018-2019 The GeekCash developers
+# Copytight (c) 2022			The BlazeGeek developers
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
