--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -31,7 +31,7 @@ packages:
 - "python3"
 - "libxkbcommon0"
 remotes:
-- "url": "https://github.com/geekcash/geek.git"
+- "url": "https://github.com/blazegeek/blazegeekcash.git"
   "dir": "geekcash"
 files: []
 script: |
