--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -25,7 +25,7 @@ packages:
 - "python3"
 - "rename"
 remotes:
-- "url": "https://github.com/geekcash/geek.git"
+- "url": "https://github.com/blazegeek/blazegeekcash.git"
   "dir": "geekcash"
 files: []
 script: |
