--- a/doc/man/Makefile.am
+++ b/doc/man/Makefile.am
@@ -1,13 +1,13 @@
 dist_man1_MANS=
 
 if BUILD_BITCOIND
-  dist_man1_MANS+=geekcashd.1
+  dist_man1_MANS+=coincoind.1
 endif
 
 if ENABLE_QT
-  dist_man1_MANS+=geekcash-qt.1
+  dist_man1_MANS+=coincoin-qt.1
 endif
 
 if BUILD_BITCOIN_UTILS
-  dist_man1_MANS+=geekcash-cli.1 geekcash-tx.1
+  dist_man1_MANS+=coincoin-cli.1 coincoin-tx.1
 endif
